# C_S_P

./: .gitignore  .gitmodules  C_S_P.sln  MeasurmentPlan.txt  README.md
Project1/: CMakeCache.txt  CMakeLists.txt  Concurrent.cpp  CountThenMove.cpp  Count_then_move.cpp  concurrent-test-2024-02-28-10:55:30.csv  countthenmove-test-2024-02-28-10:55:30.csv  main.cpp  output.txt  run.sh
Project1/2024-03-04-19-59-22/test-1/concurrent-no-affinity/: perf-cache-miss.csv  perf-dTLB.csv  perf-iTLB.csv  timings.csv
Project1/2024-03-04-19-59-22/test-1/countthenmove-no-affinty/: perf-cache-miss.csv  perf-dTLB.csv  perf-iTLB.csv  timings.csv
Project1/2024-03-04-19-59-22/test-1/countthenmove-with-affinty/: perf-cache-miss.csv  perf-dTLB.csv  perf-iTLB.csv  timings.csv
Project1/2024-03-04-19-59-22/test-2/concurrent-no-affinity/: perf-cache-miss.csv  perf-dTLB.csv  perf-iTLB.csv  timings.csv
Project1/2024-03-04-19-59-22/test-2/concurrent-with-affinity/: timings.csv
Project1/2024-03-04-19-59-22/test-2/countthenmove-no-affinty/: perf-cache-miss.csv  perf-dTLB.csv  perf-iTLB.csv  timings.csv
Project1/2024-03-04-19-59-22/test-2/countthenmove-with-affinty/: perf-cache-miss.csv  perf-dTLB.csv  perf-iTLB.csv  timings.csv
Project1/2024-03-04-21-01-45/: meta.txt
Project1/2024-03-18-16:00:48/: meta.txt
Project1/includes/: Concurrent.hpp  CountThenMove.hpp  Count_then_move.hpp
Project1/includes/utils/: inputGen.hpp
Project1/notes/: ChatPDF-DataPartitioningonChipMultiprocessors.txt  howItWorkTheory.txt  testing_plan.txt
Project1/utils/: inputGen.cpp
Project2/: .gitignore  (+8 more)
(+1305 files in other folders)
